--- a/book/calculation_examples/safety/effect_vs_resistance.ipynb
+++ b/book/calculation_examples/safety/effect_vs_resistance.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Effect vs Resistance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -438,402 +445,6 @@
     "\n",
     "plt.figure(figsize=(10,8))\n",
     "plt.rcParams.update({'font.size': 12, 'lines.linewidth': 2})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "remove-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "## Colors\n",
-    "grey = '#eeeeee' # light grey fill\n",
-    "\n",
-    "### Prepare all the graphs that are to be plotted\n",
-    "#### Define the range of densities to plot\n",
-    "range_elements = np.arange(0, 10, 1)\n",
-    "n_element = np.max(range_elements)\n",
-    "\n",
-    "### Create plot\n",
-    "fig = go.Figure()\n",
-    "\n",
-    "base_traces = 0 # Number of traces that are always visible\n",
-    "\n",
-    "# x-axis range with 1 steps\n",
-    "x_axis = np.arange(-50, 450, 1)\n",
-    "\n",
-    "meanE = 70\n",
-    "sdE = 23.52\n",
-    "gamma_E = 1.5\n",
-    "\n",
-    "Elower = 0.5*meanE\n",
-    "Eupper = 1.5*meanE\n",
-    "E = np.arange(Elower, Eupper, 1)\n",
-    "\n",
-    "probE = (1 / (sdE * math.sqrt(2 * math.pi))) * math.exp(-((0) ** 2) / (2 * sdE ** 2))\n",
-    "probErep = (1 / (sdE * math.sqrt(2 * math.pi))) * math.exp((-(1.64 * sdE) ** 2) / (2 * sdE ** 2))\n",
-    "Ed = (meanE + 1.64 * sdE) * gamma_E\n",
-    "E_norm = norm.pdf(x_axis, meanE, sdE)\n",
-    "\n",
-    "sdR_possibilities = np.arange(5, 55, 5)\n",
-    "gamma_R = 1.2\n",
-    "\n",
-    "## Add traces, one for each slider step\n",
-    "for i in range_elements: \n",
-    "\n",
-    "    meanR = 350\n",
-    "    sdR = sdR_possibilities[i]\n",
-    "    Rlower = 0.85*meanR\n",
-    "    Rupper = 1.15*meanR\n",
-    "    R = np.arange(Rlower, Rupper, 1)\n",
-    "\n",
-    "    # Calculating statistics\n",
-    "    probR = (1 / (sdR * math.sqrt(2 * math.pi))) * math.exp(-((0) ** 2) / (2 * sdR ** 2))\n",
-    "    probRrep = (1 / (sdR * math.sqrt(2 * math.pi))) * math.exp((-(1.64 * sdR) ** 2) / (2 * sdR ** 2))\n",
-    "    Rd = (meanR - 1.64 * sdR) / gamma_R   \n",
-    "    R_norm = norm.pdf(x_axis, meanR, sdR)\n",
-    "\n",
-    "    # calculation reliability function\n",
-    "    meanZ = meanR-meanE\n",
-    "    sdZ=math.sqrt(sdE**2+sdR**2)\n",
-    "    probZ=(1/(sdZ*math.sqrt(2*math.pi)))*math.exp(-((0)**2)/(2*sdZ**2))\n",
-    "    Z_norm = norm.pdf(x_axis, meanZ, sdZ)\n",
-    "    beta=meanZ/sdZ\n",
-    "    UC=Ed/Rd\n",
-    "\n",
-    "    fig.add_trace(  \n",
-    "        go.Scatter(\n",
-    "            visible=False,\n",
-    "            x=x_axis,\n",
-    "            y=R_norm,\n",
-    "            line=dict(color='#0000CC'),\n",
-    "            mode='lines',\n",
-    "            name=f'\\u03BC_R = {meanR:.2f}'))\n",
-    "    \n",
-    "    fig.add_trace(  \n",
-    "        go.Scatter(\n",
-    "            visible=False,\n",
-    "            x=x_axis,\n",
-    "            y=E_norm,\n",
-    "            line=dict(color='#CC0000'),\n",
-    "            mode='lines',\n",
-    "            name=f'\\u03BC_E = {meanE:.2f}'))\n",
-    "    \n",
-    "    fig.add_trace(  \n",
-    "        go.Scatter(\n",
-    "            visible=False,\n",
-    "            x=x_axis,\n",
-    "            y=Z_norm,\n",
-    "            line=dict(color='#00CC00'),\n",
-    "            mode='lines',\n",
-    "            name=f'\\u03BC_Z = {meanZ:.2f}'))\n",
-    "    \n",
-    "    fig.add_trace(\n",
-    "        go.Scatter(\n",
-    "            x=[0.05*np.max(x_axis)],  # Single x-coordinate for the text\n",
-    "            y=[0.025],  # Single y-coordinate for the text\n",
-    "            mode='text',  # Use 'text' mode to display text\n",
-    "            text=[f'\\u03B2={beta:.2f}'],  # Text to display\n",
-    "            textfont=dict(\n",
-    "                size=14,  # Font size\n",
-    "                color='#000000'  # Font color\n",
-    "            ),\n",
-    "            showlegend=False,  # Hide this trace from the legend\n",
-    "            textposition='middle right'))\n",
-    "    \n",
-    "    fig.add_trace(\n",
-    "        go.Scatter(\n",
-    "            x=[0.05*np.max(x_axis)],  # Single x-coordinate for the text\n",
-    "            y=[0.023],  # Single y-coordinate for the text\n",
-    "            mode='text',  # Use 'text' mode to display text\n",
-    "            text=[f'UC={UC:.2f}'],  # Text to display\n",
-    "            textfont=dict(\n",
-    "                size=14,  # Font size\n",
-    "                color='#000000'  # Font color\n",
-    "            ),\n",
-    "            showlegend=False,  # Hide this trace from the legend\n",
-    "            textposition='middle right'))\n",
-    "\n",
-    "\n",
-    "traces_per_step = 5 # Number of traces per value of i\n",
-    "\n",
-    "## Show the traces for one value of a when loading the plot (initial setup)\n",
-    "active_a_index = 1\n",
-    "for i in range(traces_per_step):\n",
-    "    curr_idx = int(base_traces + active_a_index*traces_per_step + i)\n",
-    "    fig.data[curr_idx].visible = True\n",
-    "\n",
-    "## Create and add slider\n",
-    "steps = []\n",
-    "for i in range(0, range_elements.shape[0]):\n",
-    "    visarray = [False] * len(fig.data)\n",
-    "    visarray[0:base_traces] = [True] * base_traces\n",
-    "    curr_idx = int(base_traces + i * traces_per_step)\n",
-    "    next_idx = int(base_traces + (i+1) * traces_per_step)\n",
-    "    visarray[curr_idx:next_idx] = [True] * traces_per_step\n",
-    "    step = dict(\n",
-    "        method=\"update\",\n",
-    "        args=[{\"visible\": visarray}],\n",
-    "        label=str(round(sdR_possibilities[i])))\n",
-    "    steps.append(step)\n",
-    "\n",
-    "sliders = [dict(\n",
-    "    active=active_a_index,\n",
-    "    currentvalue={\"prefix\": f\"Resistance \\u03C3_R= \"},\n",
-    "    steps=steps\n",
-    ")]\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    sliders=sliders,\n",
-    "    legend_title=\"Legend\",\n",
-    ")\n",
-    "\n",
-    "fig.update_xaxes(range=[x_axis[0], x_axis[-1]])\n",
-    "fig.update_yaxes(title_text='Probability', range=[-0.001, 0.03])\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    title=\"Safety plot varying standard deviation resistance\",\n",
-    "    sliders=sliders,\n",
-    "    legend_title=\"Legend\"\n",
-    ")\n",
-    "\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "# Effect vs. Resistance\n",
-    "\n",
-    "The results are visualized in two plots. The functions `plot_effect_vs_resistance` and `plot_Z`. First the necessary libraries are imported. The functions are shown below. In the plots, the numerical calculations and end results are shown. At the bottom of this page you can find a calculation example.\n",
-    "\n",
-    "```{note}\n",
-    "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Effect vs Resistance plotting function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reliability Z function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Initializing examples with data\n",
-    "\n",
-    "Using the functions defined above, plots can be generated. To do so, we need numerical input values. The numerical values for the example plot above are defined below and the functions executed."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_effect_vs_resistance(meanE, sdE, gamma_E, meanR, sdR, gamma_R)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{card}\n",
-    "**Exercise**\n",
-    "\n",
-    "If $\\mu_E = 100$, $\\sigma_E = 20$, $\\mu_R = 240$ and $\\sigma_R = 20$,\n",
-    "what are $\\mu_Z$, $\\sigma_Z$ and $\\beta$?\n",
-    "Use $\\gamma_E = 1.5$ and $\\gamma_R = 1.2$.\n",
-    "\n",
-    "You might want to download some code cells or the full .ipynb page and put code in there to perform the calculations and plot the graphs.\n",
-    "\n",
-    "```{Admonition} Solution\n",
-    ":class: dropdown, tip\n",
-    "$\\mu_Z = \\mu_R - \\mu_E = 140$  \n",
-    "$\\sigma_Z = \\sqrt{\\sigma_R^2 + \\sigma_E^2} = 22.4$  \n",
-    "$\\beta = \\frac{\\mu_Z}{\\sigma_Z} = 6.3$\n",
-    "```\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "remove-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "## Colors\n",
-    "grey = '#eeeeee' # light grey fill\n",
-    "\n",
-    "### Prepare all the graphs that are to be plotted\n",
-    "#### Define the range of densities to plot\n",
-    "range_elements = np.arange(0, 10, 1)\n",
-    "n_element = np.max(range_elements)\n",
-    "\n",
-    "### Create plot\n",
-    "fig = go.Figure()\n",
-    "\n",
-    "base_traces = 0 # Number of traces that are always visible\n",
-    "\n",
-    "# x-axis range with 1 steps\n",
-    "x_axis = np.arange(-50, 450, 1)\n",
-    "\n",
-    "meanE = 70\n",
-    "sdE = 23.52\n",
-    "gamma_E = 1.5\n",
-    "\n",
-    "Elower = 0.5*meanE\n",
-    "Eupper = 1.5*meanE\n",
-    "E = np.arange(Elower, Eupper, 1)\n",
-    "\n",
-    "probE = (1 / (sdE * math.sqrt(2 * math.pi))) * math.exp(-((0) ** 2) / (2 * sdE ** 2))\n",
-    "probErep = (1 / (sdE * math.sqrt(2 * math.pi))) * math.exp((-(1.64 * sdE) ** 2) / (2 * sdE ** 2))\n",
-    "Ed = (meanE + 1.64 * sdE) * gamma_E\n",
-    "E_norm = norm.pdf(x_axis, meanE, sdE)\n",
-    "\n",
-    "sdR = 17.75\n",
-    "gamma_R = 1.2\n",
-    "R_possibilities = np.arange(250, 350, 10)\n",
-    "\n",
-    "## Add traces, one for each slider step\n",
-    "for i in range_elements: \n",
-    "\n",
-    "    meanR = R_possibilities[i]\n",
-    "    Rlower = 0.85*meanR\n",
-    "    Rupper = 1.15*meanR\n",
-    "    R = np.arange(Rlower, Rupper, 1)\n",
-    "\n",
-    "    # Calculating statistics\n",
-    "    probR = (1 / (sdR * math.sqrt(2 * math.pi))) * math.exp(-((0) ** 2) / (2 * sdR ** 2))\n",
-    "    probRrep = (1 / (sdR * math.sqrt(2 * math.pi))) * math.exp((-(1.64 * sdR) ** 2) / (2 * sdR ** 2))\n",
-    "    Rd = (meanR - 1.64 * sdR) / gamma_R   \n",
-    "    R_norm = norm.pdf(x_axis, meanR, sdR)\n",
-    "\n",
-    "    # calculation reliability function\n",
-    "    meanZ = meanR-meanE\n",
-    "    sdZ=math.sqrt(sdE**2+sdR**2)\n",
-    "    probZ=(1/(sdZ*math.sqrt(2*math.pi)))*math.exp(-((0)**2)/(2*sdZ**2))\n",
-    "    Z_norm = norm.pdf(x_axis, meanZ, sdZ)\n",
-    "    beta=meanZ/sdZ\n",
-    "    UC=Ed/Rd\n",
-    "\n",
-    "    fig.add_trace(  \n",
-    "        go.Scatter(\n",
-    "            visible=False,\n",
-    "            x=x_axis,\n",
-    "            y=R_norm,\n",
-    "            line=dict(color='#0000CC'),\n",
-    "            mode='lines',\n",
-    "            name=f'\\u03BC_R = {meanR:.2f}'))\n",
-    "    \n",
-    "    fig.add_trace(  \n",
-    "        go.Scatter(\n",
-    "            visible=False,\n",
-    "            x=x_axis,\n",
-    "            y=E_norm,\n",
-    "            line=dict(color='#CC0000'),\n",
-    "            mode='lines',\n",
-    "            name=f'\\u03BC_E = {meanE:.2f}'))\n",
-    "    \n",
-    "    fig.add_trace(  \n",
-    "        go.Scatter(\n",
-    "            visible=False,\n",
-    "            x=x_axis,\n",
-    "            y=Z_norm,\n",
-    "            line=dict(color='#00CC00'),\n",
-    "            mode='lines',\n",
-    "            name=f'\\u03BC_Z = {meanZ:.2f}'))\n",
-    "    \n",
-    "    fig.add_trace(\n",
-    "        go.Scatter(\n",
-    "            x=[0.05*np.max(x_axis)],  # Single x-coordinate for the text\n",
-    "            y=[0.023],  # Single y-coordinate for the text\n",
-    "            mode='text',  # Use 'text' mode to display text\n",
-    "            text=[f'\\u03B2={beta:.2f}'],  # Text to display\n",
-    "            textfont=dict(\n",
-    "                size=14,  # Font size\n",
-    "                color='#000000'  # Font color\n",
-    "            ),\n",
-    "            showlegend=False,  # Hide this trace from the legend\n",
-    "            textposition='middle right'))\n",
-    "    \n",
-    "    fig.add_trace(\n",
-    "        go.Scatter(\n",
-    "            x=[0.05*np.max(x_axis)],  # Single x-coordinate for the text\n",
-    "            y=[0.025],  # Single y-coordinate for the text\n",
-    "            mode='text',  # Use 'text' mode to display text\n",
-    "            text=[f'UC={UC:.2f}'],  # Text to display\n",
-    "            textfont=dict(\n",
-    "                size=14,  # Font size\n",
-    "                color='#000000'  # Font color\n",
-    "            ),\n",
-    "            showlegend=False,  # Hide this trace from the legend\n",
-    "            textposition='middle right'))\n",
-    "\n",
-    "traces_per_step = 5 # Number of traces per value of i\n",
-    "\n",
-    "## Show the traces for one value of a when loading the plot (initial setup)\n",
-    "active_a_index = 1\n",
-    "for i in range(traces_per_step):\n",
-    "    curr_idx = int(base_traces + active_a_index*traces_per_step + i)\n",
-    "    fig.data[curr_idx].visible = True\n",
-    "\n",
-    "## Create and add slider\n",
-    "steps = []\n",
-    "for i in range(0, range_elements.shape[0]):\n",
-    "    visarray = [False] * len(fig.data)\n",
-    "    visarray[0:base_traces] = [True] * base_traces\n",
-    "    curr_idx = int(base_traces + i * traces_per_step)\n",
-    "    next_idx = int(base_traces + (i+1) * traces_per_step)\n",
-    "    visarray[curr_idx:next_idx] = [True] * traces_per_step\n",
-    "    step = dict(\n",
-    "        method=\"update\",\n",
-    "        args=[{\"visible\": visarray}],\n",
-    "        label=str(round(R_possibilities[i]))\n",
-    "    )\n",
-    "    steps.append(step)\n",
-    "\n",
-    "sliders = [dict(\n",
-    "    active=active_a_index,\n",
-    "    currentvalue={\"prefix\": f\"Resistance \\u03BC_R = \"},\n",
-    "    steps=steps\n",
-    ")]\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    sliders=sliders,\n",
-    "    legend_title=\"Legend\",\n",
-    ")\n",
-    "\n",
-    "fig.update_xaxes(range=[x_axis[0], x_axis[-1]])\n",
-    "fig.update_yaxes(title_text='Probability', range=[-0.001, 0.03])\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    title=\"Safety plot varying mean resistance\",\n",
-    "    sliders=sliders,\n",
-    "    legend_title=\"Legend\"\n",
-    ")\n",
-    "\n",
-    "fig"
    ]
   },
   {
