--- a/book/calculation_examples/safety/effect_vs_resistance.ipynb
+++ b/book/calculation_examples/safety/effect_vs_resistance.ipynb
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{card}\n",
+    "````{card}\n",
     "**Exercise**\n",
     "\n",
     "If $\\mu_E = 100$, $\\sigma_E = 20$, $\\mu_R = 240$ and $\\sigma_R = 20$,\n",
@@ -260,7 +260,7 @@
     "$\\sigma_Z = \\sqrt{\\sigma_R^2 + \\sigma_E^2} = 22.4$  \n",
     "$\\beta = \\frac{\\mu_Z}{\\sigma_Z} = 6.3$\n",
     "```\n",
-    "```"
+    "````"
    ]
   },
   {
