--- a/book/basics/concrete/material_characteristics_concrete.ipynb
+++ b/book/basics/concrete/material_characteristics_concrete.ipynb
@@ -111,9 +111,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`````{Note}\n",
+    "```{Note}\n",
     "This diagram changes when higher strength classes are chosen. For the strength classes shown in the table in this paragraph these values are valid.\n",
-    "`````"
+    "```"
    ]
   },
   {
