--- a/book/basics/sustainable_properties_materials.ipynb
+++ b/book/basics/sustainable_properties_materials.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Sustainable properties of materials\n",
     "\n",
-    "### Environmental Costs and Emissions of Building Materials\n",
+    "## Environmental Costs and Emissions of Building Materials\n",
     "\n",
     "When selecting building materials, it is essential to consider their environmental impacts. Below is a comparison of the environmental costs and emissions associated with concrete [^1], steel [^2], and timber [^4].\n",
     "\n",
@@ -16,11 +16,11 @@
     "| Steel    | 1,800 to 2,000                     | 20,000 to 35,000                 | Habitat destruction, pollution from mining   |\n",
     "| Timber   | -600 to -1,200 (carbon storage) | 500 to 1,000                     | Deforestation if not sustainably sourced   |\n",
     "\n",
-    "### Life Cycle Assessment (LCA) \n",
+    "## Life Cycle Assessment (LCA) \n",
     "\n",
     "Life Cycle Assessment (LCA) is a comprehensive method used to evaluate the environmental impacts of a product, process, or service throughout its entire life cycle [^5], [^6]. This methodology takes into account every stage from raw material extraction through production, use, and disposal or recycling. The primary goal of LCA is to identify and quantify the environmental burdens and impacts associated with these stages, providing a thorough understanding of the overall environmental performance.\n",
     "\n",
-    "#### Key Stages of LCA\n",
+    "### Key Stages of LCA\n",
     "\n",
     "1. **Goal and Scope Definition**: Establishes the objectives, system boundaries, and level of detail for the assessment. This stage defines what the study aims to achieve and the specific aspects to be considered.\n",
     "\n",
@@ -30,7 +30,7 @@
     "\n",
     "4. **Interpretation**: Analyzes the results, draws conclusions, and makes recommendations based on the findings. This stage ensures that the assessment aligns with the initial goals and provides actionable insights.\n",
     "\n",
-    "#### LCA Categories\n",
+    "### LCA Categories\n",
     "\n",
     "LCA considers several environmental impact categories [^7] to provide a holistic view of a product’s environmental performance:\n",
     "\n",
@@ -43,7 +43,7 @@
     "- **Ecotoxicity Potential**: Evaluates the potential harm to ecosystems from toxic substances, expressed as kg 1,4-DCB equivalent.\n",
     "- **Resource Depletion**: Measures the use of non-renewable resources, typically expressed in terms of kg Sb (antimony) equivalent or other resource metrics.\n",
     "\n",
-    "#### Applications of LCA \n",
+    "### Applications of LCA \n",
     "\n",
     "LCA is widely used across various industries and sectors for several purposes [^3]:\n",
     "\n",
@@ -52,7 +52,7 @@
     "- **Environmental Reporting**: Provides data for sustainability reports and environmental declarations.\n",
     "- **Comparative Analysis**: Allows comparison of the environmental impacts of different products or processes.\n",
     "\n",
-    "#### Benefits of LCA\n",
+    "### Benefits of LCA\n",
     "\n",
     "- **Comprehensive Analysis**: Considers a broad range of environmental impacts over the entire life cycle.\n",
     "- **Informed Decision-Making**: Provides valuable insights for improving environmental performance.\n",
@@ -73,73 +73,73 @@
     "\n",
     "Each building material has its own set of environmental impacts. Concrete and steel are associated with high CO2 emissions and energy consumption, whereas timber can act as a carbon sink but requires careful management to prevent deforestation. Sustainable practices and innovative technologies can help mitigate some of these environmental impacts.\n",
     "\n",
-    "### Comparison of Steel, Timber, and Concrete Structures\n",
+    "## Comparison of Steel, Timber, and Concrete Structures\n",
     "\n",
     "When deciding on the material for constructing a building, it's essential to consider the costs associated with each option. Steel, timber, and concrete are among the most commonly used materials in the construction industry. This comparison will analyze their costs per square meter, taking into account material, labor, and maintenance costs.\n",
     "\n",
-    "### Steel Structures\n",
+    "## Steel Structures\n",
     "\n",
-    "#### Material Costs\n",
+    "### Material Costs\n",
     "- Steel is known for its high strength-to-weight ratio, which can result in a lighter overall structure.\n",
     "- The cost of steel fluctuates with market conditions but generally ranges from USD 1,200 to 2,500 per ton.\n",
     "- The cost per square meter typically falls between USD 50 and 150, depending on the complexity and design of the structure.\n",
     "\n",
-    "#### Labor Costs\n",
+    "### Labor Costs\n",
     "- Steel structures often require skilled labor for welding and assembly.\n",
     "- Labor costs can be higher due to the need for specialized equipment and safety measures.\n",
     "- Installation costs range from USD 30 to 70 per square meter.\n",
     "\n",
-    "#### Maintenance Costs\n",
+    "### Maintenance Costs\n",
     "- Steel requires regular maintenance to prevent rust and corrosion.\n",
     "- Maintenance costs can be significant over the building's lifespan, ranging from USD 1 to 5 per square meter annually.\n",
     "\n",
-    "#### Total Cost\n",
+    "### Total Cost\n",
     "- **Total Cost per Square Meter:** USD 80 to 225\n",
     "\n",
-    "### Timber Structures\n",
+    "## Timber Structures\n",
     "\n",
-    "#### Material Costs\n",
+    "### Material Costs\n",
     "- Timber is a renewable resource and generally cheaper than steel.\n",
     "- The cost of timber can vary based on type (e.g., softwood vs. hardwood), with prices ranging from USD 500 to 1,200 per cubic meter.\n",
     "- The cost per square meter typically falls between USD 30 and 100.\n",
     "\n",
-    "#### Labor Costs\n",
+    "### Labor Costs\n",
     "- Timber construction is often quicker and requires less specialized labor compared to steel.\n",
     "- Labor costs are generally lower, ranging from USD 20 to 50 per square meter.\n",
     "\n",
-    "#### Maintenance Costs\n",
+    "### Maintenance Costs\n",
     "- Timber requires protection from pests, rot, and weathering.\n",
     "- Maintenance costs can be moderate, typically ranging from USD 2 to 6 per square meter annually.\n",
     "\n",
-    "#### Total Cost\n",
+    "### Total Cost\n",
     "- **Total Cost per Square Meter:** USD 52 to 156\n",
     "\n",
-    "### Concrete Structures\n",
+    "## Concrete Structures\n",
     "\n",
-    "#### Material Costs\n",
+    "### Material Costs\n",
     "- Concrete is a versatile and durable material, widely used in various types of construction.\n",
     "- The cost of concrete can vary based on mix and reinforcement, typically ranging from USD 75 to 150 per cubic meter.\n",
     "- The cost per square meter typically falls between USD 30 and 120.\n",
     "\n",
-    "#### Labor Costs\n",
+    "### Labor Costs\n",
     "- Concrete structures require formwork, pouring, and curing, which can be labor-intensive.\n",
     "- Labor costs are generally moderate, ranging from USD 25 to 60 per square meter.\n",
     "\n",
-    "#### Maintenance Costs\n",
+    "### Maintenance Costs\n",
     "- Concrete is low-maintenance but can require repairs for cracks and spalling over time.\n",
     "- Maintenance costs are relatively low, typically ranging from USD 1 to 3 per square meter annually.\n",
     "\n",
-    "#### Total Cost\n",
+    "### Total Cost\n",
     "- **Total Cost per Square Meter:** USD 56 to 183\n",
     "\n",
-    "### Overview\n",
+    "## Overview\n",
     "| Material    | Material Cost (USD per sqm) | Labor Cost (USD per sqm) | Maintenance Cost (USD per sqm annually) | Total Cost (USD per sqm) |\n",
     "|-------------|--------------------------|-----------------------|--------------------------------------|----------------------|\n",
     "| **Steel**   | 50 - 150               | 30 - 70             | 1 - 5                              | 80 - 225           |\n",
     "| **Timber**  | 30 - 100               | 20 - 50             | 2 - 6                              | 52 - 156           |\n",
     "| **Concrete**| 30 - 120               | 25 - 60             | 1 - 3                              | 56 - 183           |\n",
     "\n",
-    "### Conclusion\n",
+    "## Conclusion\n",
     "Each material has its own advantages and cost implications. Steel structures tend to be more expensive due to higher material and labor costs but offer high strength and durability. Timber structures are generally more cost-effective and environmentally friendly but require careful maintenance. Concrete structures strike a balance between cost, durability, and maintenance needs. The choice of material should align with the specific requirements and budget constraints of the project.\n",
     "\n",
     "[^1]: Hammond, G., & Jones, C. (2008). Inventory of Carbon & Energy (ICE) Version 1.6a. Sustainable Energy Research Team (SERT), University of Bath.\n",
