Feedback phase 1, final commit

--- a/book/calculation_examples/steel/cantilever_beam.ipynb
+++ b/book/calculation_examples/steel/cantilever_beam.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Global dimensioning cantilever beam\n",
+    "```{note}\n",
+    "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
+    "```\n",
     "\n",
     "````{margin}\n",
     "**Problem analysis**\n",
