--- a/book/calculation_examples/timber/timber_columns.ipynb
+++ b/book/calculation_examples/timber/timber_columns.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Columns  \n",
+    "```{note}\n",
+    "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
+    "```\n",
     "\n",
     "This page provides calculation examples for the structural design of timber columns in accordance with modern engineering principles. It demonstrates key steps for verifying column dimensions, buckling resistance, and material stresses under various load conditions. Through clear examples and detailed calculations, the page illustrates how to optimise timber columns for stability and safety, ensuring compliance with design requirements. Assumptions: column made of laminated timber GL24h, grid 6 m x 6 m, timber floor $G = 2.0 \\, \\text{kN/m}^2$, and CC2  \n",
     "\n",
