--- a/book/calculation_examples/steel/beam.ipynb
+++ b/book/calculation_examples/steel/beam.ipynb
@@ -5,6 +5,10 @@
    "metadata": {},
    "source": [
     "# Global dimensioning beam\n",
+    "```{note}\n",
+    "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
+    "```\n",
+    "\n",
     "````{margin}\n",
     "**Problem analysis**\n",
     "```{figure} ../safety/Images/design_process_1.jpg\n",
