--- a/book/calculation_examples/steel/truss_beam.ipynb
+++ b/book/calculation_examples/steel/truss_beam.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Global dimensioning truss beam\n",
+    "```{note}\n",
+    "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
+    "```\n",
     "\n",
     "For larger spans, a simple beam will no longer suffice. A suitable element for consideration is a truss beam. In construction, the term \"truss\" is also used for timber frames with masonry infill, commonly seen in buildings in Germany. In this chapter, we refer to a truss as a structural element composed of triangles. Unlike a quadrilateral, a triangle is rigid. The simplest truss is a triangular truss, consisting of a single triangle.\n",
     "\n",
