--- a/book/calculation_examples/timber/predesign_timber_hall.ipynb
+++ b/book/calculation_examples/timber/predesign_timber_hall.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pre-design of timber hall"
+    "# Pre-design of timber hall\n",
+    "```{note}\n",
+    "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
+    "```"
    ]
   },
   {
