--- a/book/design/steel/steel_structures.ipynb
+++ b/book/design/steel/steel_structures.ipynb
@@ -161,7 +161,7 @@
     "```{figure} Images/Roofing_Plate1.jpg\n",
     "---\n",
     "---\n",
-    "Steel structure roofing plate.\n",
+    "Cold formed corrugated steel roofing plate.\n",
     "```  \n",
     "$l = 2 - 6 m$  \n",
     "$h = 25 - 120$  \n",
@@ -170,7 +170,7 @@
     "```{figure} Images/Roofing_Plate2.jpg\n",
     "---\n",
     "---\n",
-    "Steel structure roofing plate.\n",
+    "Cold formed corrugated steel sandwich panel with foam core.\n",
     "```  \n",
     "$l = 2 - 3 m$  \n",
     "$h = 75 mm$  \n",
