--- a/book/design/timber/timber_structures_and_details.ipynb
+++ b/book/design/timber/timber_structures_and_details.ipynb
@@ -14,11 +14,11 @@
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
-    "**Solid tiber beams**  \n",
+    "**Solid timber beams**  \n",
     "$l = 2 - 6 m$  \n",
     "$h = \\frac{l}{15} - \\frac{l}{20} m$\n",
     "\n",
-    "**Glulam beams**  \n",
+    "**Glulam (=glue-laminated) beams**  \n",
     "$l = 6 - 30 m$  \n",
     "$s < 5 m \\rightarrow  h = \\frac{l}{17}$  \n",
     "$s = 5 - 8 m \\rightarrow  h = \\frac{l}{16}$\n",
