--- a/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
@@ -127,11 +127,18 @@
     "| h/d ≤ 0.25 | -1.2  |   -0.8   |   -0.5   |   +0.7   |   -0.3   |\n",
     "```\n",
     "\n",
-    "```{figure} Images/Windzones1.png\n",
+    "```{figure} Images/windbelastingen.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
-    "Windzones for façades. Left: fpr all e & d. Right: e < d. \n",
+    "Windzones for façades of a box-shaped building.\n",
+    "```\n",
+    "\n",
+"```{figure} Images/Windzones1.png\n",
+    "---\n",
+    "scale: 100%\n",
+    "---\n",
+    "Windzones for façades. Left: for all e & d. Right: e < d. \n",
     "```\n",
     "\n",
     "```{figure} Images/Windzones2.png\n",
