--- a/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
@@ -92,9 +92,9 @@
     "$b$ = dimension in crosswind direction  \n",
     "$e$ = $b$ or $2h$, whichever is smaller  \n",
     "\n",
-    "```{figure} Images/Windbox.png\n",
+    "```{figure} Images/windbelastingen0.png\n",
     "---\n",
-    "scale: 50%\n",
+    "scale: 30%\n",
     "---\n",
     "Building parameters.\n",
     "```\n",
@@ -127,25 +127,25 @@
     "| h/d ≤ 0.25 | -1.2  |   -0.8   |   -0.5   |   +0.7   |   -0.3   |\n",
     "```\n",
     "\n",
-    "```{figure} Images/windbelastingen.png\n",
+    "```{figure} Images/windbelastingen1.png\n",
     "---\n",
     "scale: 40%\n",
     "---\n",
-    "Windzones for façades of a box-shaped building.\n",
+    "Windzones for façades of a box-shaped building with e < d.\n",
     "```\n",
     "\n",
-"```{figure} Images/Windzones1.png\n",
+    "```{figure} Images/windbelastingen2.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 40%\n",
     "---\n",
-    "Windzones for façades. Left: for all e & d. Right: e < d. \n",
+    "Windzones for façades of a box-shaped building with e > d. \n",
     "```\n",
     "\n",
-    "```{figure} Images/Windzones2.png\n",
+    "```{figure} Images/windbelastingen3.png\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 40%\n",
     "---\n",
-    "Windzones for façades. Left: e > d. Right: e > 5d.  \n",
+    "Windzones for façades of a box-shaped building with e >= 5d. \n",
     "```"
    ]
   },
