--- a/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
@@ -169,9 +169,9 @@
     "\n",
     "```{figure} Images/Windzones_Roofs1.png\n",
     "---\n",
-    "scale: 50%\n",
+    "scale: 60%\n",
     "---\n",
-    "Flat roofs, both wind directions.\n",
+    "Flat roofs, both wind directions (top view).\n",
     "```"
    ]
   },
@@ -188,16 +188,16 @@
    "source": [
     "```{figure} Images/Windzones_Roofs2.png\n",
     "---\n",
-    "scale: 50%\n",
+    "scale: 60%\n",
     "---\n",
-    "Duopitch roofs, ridge crosswind ($\\theta = 0$).\n",
+    "Duopitch roofs, ridge crosswind ($\\theta = 0$) (top view).\n",
     "```\n",
     "  \n",
     "```{figure} Images/Windzones_Roofs3.png\n",
     "---\n",
-    "scale: 50%\n",
+    "scale:60%\n",
     "---\n",
-    "Duopitch roofs, ridge parallel to ($\\theta = 90$).\n",
+    "Duopitch roofs, ridge parallel to wind ($\\theta = 90$) (top view).\n",
     "```\n",
     "\n",
     "```{table} Dupitch roofs, where $theta = 0$, and its corresponding $c_f$ value.\n",
