Added line to beams on multiple supports

--- a/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
+++ b/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
@@ -129,6 +129,7 @@
     "- $M3 = -0,0333 * 5 * 62 \\ kNm$  \n",
     "- $R2 = 1,2001 * 5 * 6 \\ kN$\n",
     "`````\n",
+    "The M, V and displacement lines for the above situations can be found here:\n",
     "\n"
    ]
   },
