--- a/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
+++ b/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
@@ -129,9 +129,21 @@
     "- $M3 = -0,0333 * 5 * 62 \\ kNm$  \n",
     "- $R2 = 1,2001 * 5 * 6 \\ kN$\n",
     "`````\n",
-    "The M, V and displacement lines for the above situations can be found here:\n",
+    "The M, V and displacement diagrams for the above situations can be found here:\n",
+    "\n",
+    "```{figure} Images/M5.jpg\n",
+    "---\n",
+    "scale: 100%\n",
+    "---\n",
+    "Moment line beam on 5 support points under equally distributed load.\n",
+    "```\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
