--- a/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
+++ b/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
@@ -131,7 +131,7 @@
     "`````\n",
     "The M, V and displacement diagrams for the above situations can be found here:\n",
     "\n",
-    "```{figure} Images/M5.jpg\n",
+    "```{figure} Images/M5.JPG\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
