--- a/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
+++ b/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
@@ -131,11 +131,42 @@
     "`````\n",
     "The M, V and displacement diagrams for the above situations can be found here:\n",
     "\n",
+    "```{figure} Images/M3.JPG\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
+    "Moment diagram beam on 3 support points under equally distributed load.\n",
+    "```\n",
+    "```{figure} Images/M4.JPG\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
+    "Moment diagram beam on 4 support points under equally distributed load.\n",
+    "```\n",
     "```{figure} Images/M5.JPG\n",
     "---\n",
-    "scale: 100%\n",
+    "scale: 75%\n",
     "---\n",
-    "Moment line beam on 5 support points under equally distributed load.\n",
+    "Moment diagram beam on 5 support points under equally distributed load.\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/V3.JPG\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
+    "Shear force diagram beam on 3 support points under equally distributed load.\n",
+    "```\n",
+    "```{figure} Images/V4.JPG\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
+    "Shear force diagram on 4 support points under equally distributed load.\n",
+    "```\n",
+    "```{figure} Images/V5.JPG\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
+    "Shear force diagram on 5 support points under equally distributed load.\n",
     "```\n",
     "\n"
    ]
