--- a/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
+++ b/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
@@ -131,6 +131,25 @@
     "`````\n",
     "The M, V and displacement diagrams for the above situations can be found here:\n",
     "\n",
+    "```{figure} Images/V3.JPG\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
+    "Shear force diagram beam on 3 support points under equally distributed load (multiply with $q * L$).\n",
+    "```\n",
+    "```{figure} Images/V4.JPG\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
+    "Shear force diagram on 4 support points under equally distributed load.\n",
+    "```\n",
+    "```{figure} Images/V5.JPG\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
+    "Shear force diagram on 5 support points under equally distributed load.\n",
+    "```\n",
+    "\n",
     "```{figure} Images/M3.JPG\n",
     "---\n",
     "scale: 75%\n",
@@ -150,24 +169,6 @@
     "Moment diagram beam on 5 support points under equally distributed load.\n",
     "```\n",
     "\n",
-    "```{figure} Images/V3.JPG\n",
-    "---\n",
-    "scale: 75%\n",
-    "---\n",
-    "Shear force diagram beam on 3 support points under equally distributed load.\n",
-    "```\n",
-    "```{figure} Images/V4.JPG\n",
-    "---\n",
-    "scale: 75%\n",
-    "---\n",
-    "Shear force diagram on 4 support points under equally distributed load.\n",
-    "```\n",
-    "```{figure} Images/V5.JPG\n",
-    "---\n",
-    "scale: 75%\n",
-    "---\n",
-    "Shear force diagram on 5 support points under equally distributed load.\n",
-    "```\n",
     "\n"
    ]
   },
