--- a/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
+++ b/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
@@ -129,19 +129,19 @@
     "- $M3 = -0,0333 * 5 * 62 \\ kNm$  \n",
     "- $R2 = 1,2001 * 5 * 6 \\ kN$\n",
     "`````\n",
-    "The M, V and displacement diagrams for the above situations can be found here:\n",
+    "The M, V and displacement diagrams for the above situations can be found below. Multiply the factors in the diagrams with $q * L$ to calculate V, with $q * L^2$ to calculate M and with $q * L^4 / EI$ to find the deformation.\n",
     "\n",
     "```{figure} Images/V3.JPG\n",
     "---\n",
     "scale: 75%\n",
     "---\n",
-    "Shear force diagram beam on 3 support points under equally distributed load (multiply with $q * L$).\n",
+    "Shear force diagram beam on 3 support points under equally distributed load (case h from the figure above).\n",
     "```\n",
     "```{figure} Images/V4.JPG\n",
     "---\n",
     "scale: 75%\n",
     "---\n",
-    "Shear force diagram on 4 support points under equally distributed load.\n",
+    "Shear force diagram on 4 support points under equally distributed load (case j from the figure above).\n",
     "```\n",
     "```{figure} Images/V5.JPG\n",
     "---\n",
@@ -154,13 +154,13 @@
     "---\n",
     "scale: 75%\n",
     "---\n",
-    "Moment diagram beam on 3 support points under equally distributed load.\n",
+    "Moment diagram beam on 3 support points under equally distributed load (case h from the figure above).\n",
     "```\n",
     "```{figure} Images/M4.JPG\n",
     "---\n",
     "scale: 75%\n",
     "---\n",
-    "Moment diagram beam on 4 support points under equally distributed load.\n",
+    "Moment diagram beam on 4 support points under equally distributed load (case j from the figure above).\n",
     "```\n",
     "```{figure} Images/M5.JPG\n",
     "---\n",
@@ -169,6 +169,24 @@
     "Moment diagram beam on 5 support points under equally distributed load.\n",
     "```\n",
     "\n",
+    "```{figure} Images/D3.JPG\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
+    "Deformation diagram beam on 3 support points under equally distributed load (case h from the figure above).\n",
+    "```\n",
+    "```{figure} Images/D4.JPG\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
+    "Deformation diagram beam on 4 support points under equally distributed load (case j from the figure above).\n",
+    "```\n",
+    "```{figure} Images/D5.JPG\n",
+    "---\n",
+    "scale: 75%\n",
+    "---\n",
+    "Deformation diagram beam on 5 support points under equally distributed load.\n",
+    "```\n",
     "\n"
    ]
   },
