--- a/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
+++ b/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "```{table} Bending moments and support reactions for beams on multiple supports.\n",
     ":name: bending-and-reaction-force-beam-multiple-supports\n",
-    "| Type | M(1)  | M2     | M(2)   | M3     | M(3)   | R1     | R2     | R3     | R4     |\n",
+    "| Case | M(1)  | M2     | M(2)   | M3     | M(3)   | R1     | R2     | R3     | R4     |\n",
     "|------|--------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
     "| a    | 0.1562 | -0.1875| 0.1562 | || 0.3125 | 1.3750 | 0.3125 |        |        |        |\n",
     "| b    | 0.2031 | -0.0938| -0.0469||| 0.4062 | 0.6876 | -0.0938|        |        |        |\n",
@@ -42,7 +42,7 @@
     "R = factor * F\n",
     "$$\n",
     "\n",
-    "The numbers in the tables are related to the concentrated loads working on the structure. The bending moments and support reactions in the designated points are found by multiplying the factors in the table with F x L or F.\n",
+    "case numbers in the tables are related to the concentrated loads working on the structure. The bending moments and support reactions in the designated points are found by multiplying the factors in the table with F x L or F.\n",
     "\n",
     "- M(1) is the maximum bending in beam (1).\n",
     "- M3 is the hogging moment located at support 3.\n",
@@ -82,7 +82,7 @@
     "\n",
     "```{table} Bending moments and support reactions for beams on multiple supports with distributed load.\n",
     ":name: bending-and-reaction-force-beam-multiple-supports-distributed-load\n",
-    "| Type | M(1) | location rel. to 1* | M2     | M(2) | location rel. to 2** | M3     | M(3) | R1     | R2     | R3     | R4     |\n",
+    "| Case | M(1) | location rel. to 1* | M2     | M(2) | location rel. to 2** | M3     | M(3) | R1     | R2     | R3     | R4     |\n",
     "|------|----------------|-----------|--------|-----------------|-----------|--------|------|--------|--------|--------|--------|\n",
     "| h    | 0.0703                    | 0.3750 | -0.1250                    | 0.0703 | 0.6250||| 0.3750 | 1.2500 | 0.3750 |        |\n",
     "| i    | 0.0957                    | 0.4375 | -0.0625                    | -0.0313| ||      | 0.4375 | 0.6250 | -0.0625|        |\n",
