--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -21,11 +21,11 @@
     "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
     "```\n",
     "\n",
-    "The transverse dimensions of beams depend on the forces acting on them, but also on the length of those elements. To provide an initial estimate of the dimensions, estimation rules or key figures have been established. These estimation rules are no different from a first global approximation. They are mainly intended for usual structures with normal loads. The more extreme the structure or the load placed on it, the more inaccurate the estimation rule. \n",
+    "The cross-section dimensions (height x width) of a beam depend on the forces acting on it and on its span. To provide an initial estimate of the dimensions, estimation rules ('rules of thumb') or design diagrams are available. These rules of thumb are useful for a first approximation only and are mainly intended for common structures with regular loads. The more extreme the structure or the load placed on it, the more inaccurate the estimation rule. \n",
     "\n",
     "For the office, we want to dimension and check a first-floor floor beam: Girder B3-D3 on the schematic load-bearing construction floor plan in the figure below.\n",
     "\n",
-    "```{figure} Images/Load-Bearing_Floor_Plan.jpg\n",
+    "```{figure} Images/Load-Bearing_Floor_Plan_v2.jpg\n",
     "---\n",
     "scale: 75%\n",
     "---\n",
