--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -23,9 +23,9 @@
     "\n",
     "The cross-section dimensions (height x width) of a beam depend on the forces acting on it and on its span. To provide an initial estimate of the dimensions, estimation rules ('rules of thumb') or design diagrams are available. These rules of thumb are useful for a first approximation only and are mainly intended for common structures with regular loads. The more extreme the structure or the load placed on it, the more inaccurate the estimation rule. \n",
     "\n",
-    "For the office, we want to dimension and check a first-floor floor beam: Girder B3-D3 on the schematic load-bearing construction floor plan in the figure below.\n",
+    "For the office, we want to dimension and check a first-floor floor beam: beam B3-D3 on the schematic load-bearing construction floor plan in the figure below.\n",
     "\n",
-    "```{figure} Images/Load-Bearing_Floor_Plan_v3.jpg\n",
+    "```{figure} Images/Load-Bearing_Floor_Plan_v4.jpg\n",
     "---\n",
     "scale: 85%\n",
     "---\n",
@@ -43,7 +43,7 @@
     "```\n",
     "````\n",
     "\n",
-    "For concrete and wooden beams, the weight per linear meter is not always provided. To determine that, we need to multiply the cross-sectional area ($b$ × $h \\ [m²]$) by the density $ρ \\ [kg/m³]$, and then multiply the result by the acceleration due to gravity $[m/s²]$. For concrete, the density is $2400 \\ [kg/m³]$, for reinforced concrete $2500 \\ [kg/m³]$, and for softwood approximately $300$ to $400 \\ [kg/m³]$ (depending on the strength class). The weight per linear meter becomes:\n",
+    "For concrete beams, the weight per linear meter is not always provided. To determine it we need to multiply the cross-sectional area ($b$ × $h \\ [m²]$) by the density $ρ \\ [kg/m³]$, and then multiply the result by the gravitational acceleration, often rounded to 10 m/s^2 for early design calculations. For concrete, the density is $2400 \\ [kg/m³]$, for reinforced concrete $2500 \\ [kg/m³]$, and for softwood approximately $300$ to $400 \\ [kg/m³]$ (depending on the strength class). The weight per linear meter becomes:\n",
     "$g = b × h × ρ × \\frac{10}{1000} \\ [kN/m]$ (here $b$ and $h$ in meters!)\n",
     "\n",
     "For a rectangular cross-section, we can easily calculate the resistance moment $W$ and the quadratic area moment $I$.\n",
