--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "```{figure} Images/Load-Bearing_Floor_Plan_v4.jpg\n",
     "---\n",
-    "scale: 85%\n",
+    "scale: 75%\n",
     "---\n",
     "Schematic load-bearing floor plan, first floor office building.\n",
     "```\n",
@@ -43,10 +43,9 @@
     "```\n",
     "````\n",
     "\n",
-    "For concrete beams, the weight per linear meter is not always provided. To determine it we need to multiply the cross-sectional area ($b$ × $h \\ [m²]$) by the density $ρ \\ [kg/m³]$, and then multiply the result by the gravitational acceleration, often rounded to 10 m/s^2 for early design calculations. For concrete, the density is $2400 \\ [kg/m³]$, for reinforced concrete $2500 \\ [kg/m³]$, and for softwood approximately $300$ to $400 \\ [kg/m³]$ (depending on the strength class). The weight per linear meter becomes:\n",
-    "$g = b × h × ρ × \\frac{10}{1000} \\ [kN/m]$ (here $b$ and $h$ in meters!)\n",
+    "For concrete beams, the weight per linear meter is not always provided. To determine it we need to multiply the cross-sectional area ($b$ × $h \\ [m²]$) by the density $ρ \\ [kg/m³]$, and then multiply the result by the gravitational acceleration $9.81 \\ [m/s^2]$, often rounded to $10 \\ [m/s^2]$ for early design calculations. For reinforced concrete the density is around $2500 \\ [kg/m³]$, and for softwood approximately $300$ to $400 \\ [kg/m³]$ (depending on the timber species and strength class). The weight per linear meter $q_g$ becomes: $q_g = b × h × ρ × \\frac{10}{1000} \\ [kN/m]$ (NB: $b$ and $h$ in meters!)\n",
     "\n",
-    "For a rectangular cross-section, we can easily calculate the resistance moment $W$ and the quadratic area moment $I$.\n",
+    "For a rectangular cross-section, we can easily calculate the resistance moment (also known as section modulus) $W$ and the quadratic area moment $I$. We need these later to verify stresses and deflection:\n",
     "\\begin{gather*}\n",
     "I = \\frac{1}{12} × b × h³ \\ [mm⁴]\\\\\n",
     "W = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × b × h² \\ [mm³]\n",
@@ -54,10 +53,10 @@
     "\n",
     "\n",
     "````{note}\n",
-    "For the concrete structure, we use an in-situ cast, non-prestressed concrete beam. We choose strength class C30/37. According to the estimation rule, the height h would be equal to $\\frac{6000}{10} = 600 \\ [mm]$. For the corresponding width, we choose half the height (estimation rule): $\\frac{600}{2} = 300 \\ [mm]$. The weight per linear meter is then:  \n",
+    "First, we need to estimate the dimensions. For the concrete structure, we use an in-situ cast, non-prestressed concrete beam. Let's assume a strength class C20/25. According to an often-used rule of thumb, the height h would be equal to approximately h = L/10 = $\\frac{6000}{10} = 600 \\ [mm]$. For the corresponding width, we choose half the height (also a rule of thumb): $\\frac{600}{2} = 300 \\ [mm]$. The weight per linear meter is then:  \n",
     "0.3 [m] × 0.6 [m] × 2500 [kg/m³] × 10 [m/s²] / 1000 = 4.5 [kN/m]\n",
     "\n",
-    "We can calculate $I$ and $W$ using the above formulas.  \n",
+    "We can now calculate $I$ and $W$ using the above formulas.  \n",
     "$$\n",
     "I_y = \\frac{1}{12} × 300 [mm] × 600 [mm³] = 5.40 × 10⁹ \\ [mm⁴]\n",
     "$$  \n",
@@ -70,9 +69,9 @@
     "\n",
     "```{table} Ecample organisation of beam data.\n",
     ":name: example-organisation-beam-data\n",
-    "| Height $h_{floorbeam} \\ [mm]$ | Area $A \\ [mm²]$ | Weight $q_G \\ [N/mm]$ | Section modulus $W_y \\ [mm³]$ | Moment of inertia $I_y \\ [mm⁴]$ | Strength class $[-]$ | Strength $f_{cd} \\ [N/mm²]$ | Youngs modulus $E_{cm} \\ [N/mm²]$ |\n",
+    "| Height $h_{floorbeam} \\ [mm]$ | Area $A \\ [mm²]$ | Weight $q_G \\ [N/mm]$ | Section modulus $W_y \\ [mm³]$ | Moment of inertia $I_y \\ [mm⁴]$ | Strength class $[-]$ | Char. tensile strength $f_{ctk} \\ [N/mm²]$ | Youngs modulus (uncracked) $E_{cm} \\ [N/mm²]$ |\n",
     "|----------------|---------------|---------------|-----------|-----------|----------------|------------------|----------------|\n",
-    "| 600            | 600x300       | 4.5           | 18.0 × 10⁶|5.40 × 10⁹ |         C30/37 |         20 × 10³ |       33 × 10³ |\n",
+    "| 600            | 600x300       | 4.5           | 18.0 × 10⁶|5.40 × 10⁹ |         C20/25 |         1.5 |       30 × 10³ |\n",
     "```\n",
     "````"
    ]
