--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -71,7 +71,9 @@
     "| Height $h_{floorbeam} \\ [mm]$ | Area $A \\ [mm²]$ | Weight $q_G \\ [N/mm]$ | Section modulus $W_y \\ [mm³]$ | Moment of inertia $I_y \\ [mm⁴]$ | Strength class $[-]$ | Char. tensile strength $f_{ctk} \\ [N/mm²]$ | Youngs modulus (uncracked) $E_{cm} \\ [N/mm²]$ |\n",
     "|----------------|---------------|---------------|-----------|-----------|----------------|------------------|----------------|\n",
     "| 600            | 600x300       | 4.5           | 18.0 × 10⁶|5.40 × 10⁹ |         C20/25 |         1.5 |       30 × 10³ |\n",
-    "```"
+    "```\n",
+    "\n",
+    "It is good to notice that for the strength we did not use the compression strength, but the tensile strength of the concrete, as the latter is rather lower than the former. In the first dimensioning of beam loaded in bending, the tension stresses in the concrete will quickly become so high that reinforcement will take over, as we will see below. We will also provide a rule of thumb to approximate the amount of bending reinforcement necessary."
    ]
   },
   {
