--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -52,7 +52,7 @@
     "\\end{gather*}\n",
     "\n",
     "\n",
-    "First, we need to estimate the dimensions. For the concrete structure, we use a cast in-situ (cast on site), non-prestressed concrete beam. Let's assume a strength class C20/25. According to an often-used rule of thumb, the height h would be equal to approximately h = L/10 = $\\frac{6000}{10} = 600 \\ [mm]$. For the corresponding width, we choose half the height (also a rule of thumb): $\\frac{600}{2} = 300 \\ [mm]$. The weight per linear meter is then $0.3 [m] × 0.6 [m] × 2500 [kg/m³] × 10 [m/s²] / 1000 = 4.5 [kN/m]$\n",
+    "First, we need to estimate the dimensions. For the concrete structure, we use a cast in-situ (cast on site), non-prestressed concrete beam. Let's assume a strength class C20/25. According to an often-used rule of thumb, the height h would be equal to approximately h = L/10 = $\\frac{6000}{10} = 600 \\ [mm]$. For the corresponding width, we choose half the height (also a rule of thumb): b = h/2 = $\\frac{600}{2} = 300 \\ [mm]$. The weight per linear meter is then $0.30 \\ [m] × 0.60 \\ [m] × 2500 \\ [kg/m³] × 10 \\ [m/s²] / 1000 = 4.5 \\ [kN/m]$\n",
     "\n",
     "We can now calculate $I$ and $W$ using the above formulas.  \n",
     "\n",
@@ -66,14 +66,16 @@
     "\n",
     "The values for strength (characteristic tensile strength) and modulus of elasticity can(for uncracked concrete) be obtained from the concrete tables in the Material Properties Concrete section. It is advisable to neatly organize the beam data, for example, in a table as shown below.\n",
     "\n",
-    "```{table} Ecample organisation of beam data.\n",
+    "```{table} Example organisation of beam data.\n",
     ":name: example-organisation-beam-data\n",
     "| Height $h_{floorbeam} \\ [mm]$ | Area $A \\ [mm²]$ | Weight $q_G \\ [N/mm]$ | Section modulus $W_y \\ [mm³]$ | Moment of inertia $I_y \\ [mm⁴]$ | Strength class $[-]$ | Char. tensile strength $f_{ctk} \\ [N/mm²]$ | Youngs modulus (uncracked) $E_{cm} \\ [N/mm²]$ |\n",
     "|----------------|---------------|---------------|-----------|-----------|----------------|------------------|----------------|\n",
     "| 600            | 600x300       | 4.5           | 18.0 × 10⁶|5.40 × 10⁹ |         C20/25 |         1.5 |       30 × 10³ |\n",
     "```\n",
     "\n",
-    "It is good to notice that for the strength we did not use the compression strength, but the tensile strength of the concrete, as the latter is rather lower than the former. In the first dimensioning of beam loaded in bending, the tension stresses in the concrete will quickly become so high that reinforcement will take over, as we will see below. We will also provide a rule of thumb to approximate the amount of bending reinforcement necessary."
+    "```{note}\n",
+    "It is good to notice that for the strength we did not use the compressive strength, but the tensile strength of the concrete, as the latter is rather lower than the former. In the first dimensioning of beam loaded in bending, the tension stresses in the concrete will quickly become so high that reinforcement will take over, as we will see below. We will also provide a rule of thumb to approximate the amount of bending reinforcement necessary.\n",
+    "```"
    ]
   },
   {
@@ -93,10 +95,10 @@
     "They are then also transferred to the elements.\n",
     "````\n",
     "\n",
-    "De belasting op de ligger bestaat uit drie delen:\n",
-    "- $q_{eg}$ = Eigen gewicht van de ligger.\n",
-    "- $q_{rb}$ = Rustende belasting op de ligger, bijv. gewicht vloerconstructie, plafond, opgehangen installaties, verlichting, vloerafwerking enz.\n",
-    "- $q_{ob}$ = Opgelegde belasting (veranderlijke belasting) op de ligger.\n",
+    "The load on the beam consists of three components:\n",
+    "- $q_{self}$ = self-weight of the concrete\n",
+    "- $q_{pl}$ = permanent load, such as self-weight of the floor, ceiling, ducts and pipes, floor finishings, etc.\n",
+    "- $q_{vl}$ = variable load, such as people or furniture\n",
     "\n",
     "```{figure} Images/Loads_Beam.jpg\n",
     "---\n",
