--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "```{table} Example organisation of beam data.\n",
     ":name: example-organisation-beam-data\n",
-    "| Height $h_{floorbeam} \\ [mm]$ | Area $A \\ [mm²]$ | Weight $q_G \\ [N/mm]$ | Section modulus $W_y \\ [mm³]$ | Moment of inertia $I_y \\ [mm⁴]$ | Strength class $[-]$ | Char. tensile strength $f_{ctk} \\ [N/mm²]$ | Youngs modulus (uncracked) $E_{cm} \\ [N/mm²]$ |\n",
+    "| Height $h_{beam} \\ [mm]$ | Area $A \\ [mm²]$ | Weight $q_G \\ [N/mm]$ | Section modulus $W_y \\ [mm³]$ | Moment of Inertia $I_y \\ [mm⁴]$ | Strength class | Char. tensile strength $f_{ctk} \\ [N/mm²]$ | Youngs modulus (uncracked) $E_{cm} \\ [N/mm²]$ |\n",
     "|----------------|---------------|---------------|-----------|-----------|----------------|------------------|----------------|\n",
     "| 600            | 600x300       | 4.5           | 18.0 × 10⁶|5.40 × 10⁹ |         C20/25 |         1.5 |       30 × 10³ |\n",
     "```\n",
